# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.

include_HEADERS = ctache.h ctache/ctache_array.h ctache/ctache_data.h \
				  ctache/hash_table.h ctache/lexer.h ctache/linked_list.h \
				  ctache/parser.h ctache/render.h ctache/escaping.h
